tests/ui/discrim/discrim-ill-typed.stderr
error[E0308]: mismatched types
  --> $DIR/discrim-ill-typed.rs:15:16
   |
LL |         OhNo = 0_u8,
   |                ^^^^ expected `i8`, found `u8`
   |
help: change the type of the numeric literal from `u8` to `i8`
   |
LL |         OhNo = 0_i8,
   |                  ~~

error[E0308]: mismatched types
  --> $DIR/discrim-ill-typed.rs:28:16
   |
LL |         OhNo = 0_i8,
   |                ^^^^ expected `u8`, found `i8`
   |
help: change the type of the numeric literal from `i8` to `u8`
   |
LL |         OhNo = 0_u8,
   |                  ~~

error[E0308]: mismatched types
  --> $DIR/discrim-ill-typed.rs:41:16
   |
LL |         OhNo = 0_u16,
   |                ^^^^^ expected `i16`, found `u16`
   |
help: change the type of the numeric literal from `u16` to `i16`
   |
LL |         OhNo = 0_i16,
   |                  ~~~

error[E0308]: mismatched types
  --> $DIR/discrim-ill-typed.rs:54:16
   |
LL |         OhNo = 0_i16,
   |                ^^^^^ expected `u16`, found `i16`
   |
help: change the type of the numeric literal from `i16` to `u16`
   |
LL |         OhNo = 0_u16,
   |                  ~~~

error[E0308]: mismatched types
  --> $DIR/discrim-ill-typed.rs:67:16
   |
LL |         OhNo = 0_u32,
   |                ^^^^^ expected `i32`, found `u32`
   |
help: change the type of the numeric literal from `u32` to `i32`
   |
LL |         OhNo = 0_i32,
   |                  ~~~

error[E0308]: mismatched types
  --> $DIR/discrim-ill-typed.rs:80:16
   |
LL |         OhNo = 0_i32,
   |                ^^^^^ expected `u32`, found `i32`
   |
help: change the type of the numeric literal from `i32` to `u32`
   |
LL |         OhNo = 0_u32,
   |                  ~~~

error[E0308]: mismatched types
  --> $DIR/discrim-ill-typed.rs:93:16
   |
LL |         OhNo = 0_u64,
   |                ^^^^^ expected `i64`, found `u64`
   |
help: change the type of the numeric literal from `u64` to `i64`
   |
LL |         OhNo = 0_i64,
   |                  ~~~

error[E0308]: mismatched types
  --> $DIR/discrim-ill-typed.rs:106:16
   |
LL |         OhNo = 0_i64,
   |                ^^^^^ expected `u64`, found `i64`
   |
help: change the type of the numeric literal from `i64` to `u64`
   |
LL |         OhNo = 0_u64,
   |                  ~~~

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
